--- a/BOJ/BOJ_15829.md
+++ b/BOJ/BOJ_15829.md
@@ -15,5 +15,36 @@ $( A \times B ) \mod M = \lbrace(A \mod M) \times (B \mod M)\rbrace \mod M $
 이다.
 따라서 
 
-나중에 이어서...
+
+정답 코드:
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(void)
+{
+    long long result = 0;
+    long long rest = 1;
+    const int M = 1234567891;
+    int stringLength;
+    char *input;
+
+    scanf("%d", &stringLength);
+    input = (char *)calloc(sizeof(char), stringLength + 1);
+    scanf("%s", input);
+
+    for (int i = 0; i < stringLength; i++)
+    {
+        result = result + (input[i] - 'a' + 1) * rest;
+        rest = (rest * 31) % M;
+    }
+
+    result %= M;
+    printf("%lld", result);
+    free(input);
+
+    return 0;
+}
+```
+
 
