--- a/BOJ/BOJ_11723.md
+++ b/BOJ/BOJ_11723.md
@@ -87,29 +87,26 @@ int checkSet (int element, set *s)
     int mask = 1;
     mask = mask << (element - 1);
     mask = mask & s->bitFeild;
-    mask = mask >> (element - 1);
-    return mask;
+    return mask > 0 ? 1 : 0;
 }
 
 void toggle (int element, set *s)
 {
-    if (checkSet(element, s) == 1)
-        removeElement(element, s);
-    else
-        addElement(element, s);
+    int mask = 1;
+    mask = mask << (element - 1);
+    s->bitFeild = s->bitFeild ^ mask; //새로 배운 내용 ^ 연산자는 비트가 같으면 0을, 다르면 1이 된다. 나머지는 원래값 유지 원하는 비트는 1이면 0이 되고, 0이면 1이 된다.
 }
 
 void all (set *s)
 {
     int mask = 0;
     mask = ~mask;
-    s->bitFeild = s->bitFeild | mask;
+    s->bitFeild = mask;
 }
 
 void empty (set *s)
 {
-    int mask = 0;
-    s->bitFeild = s->bitFeild & mask;
+    s->bitFeild = 0;
 }
 
 void printBit (set s)
