--- a/BOJ/BOJ_1254.md
+++ b/BOJ/BOJ_1254.md
@@ -1,4 +1,5 @@
-백준 1254번
+백준 1254번 
+가장 짧은 팰린드롬을 만드는 경우를 떠올리긴 쉬웠지만 구현하는게 조금 어려웠던 문제
 [문제 바로가기](https://www.acmicpc.net/problem/1254)
 
 문자열을 입력받고 입력받은 문자열 뒤에 문자들을 추가해서 만들 수 있는 가장 짧은 팰린드롬의 길이를 출력하는 문제이다.
@@ -118,10 +119,6 @@ int checkSymmetry (char *string, int j, int k, int size)
     return 1;
 }
 
-
-
-
-
-
-
 ```
+
+
